[package]
name = "theorem-prover-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.2.6"
itertools = "0.13.0"
maplit = "1.0.2"
mimalloc = { version = "0.1.42", default-features = false }
peg = "0.8.3"
regex = "1.10.5"
rustc-hash = "1.1.0"
test-case = "3.3.1"
thiserror = "1.0.61"
typed-arena = "2.0.2"
unicode-normalization = "0.1.23"

[dev-dependencies]
criterion = "0.5.1"
insta = "1.39.0"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# pedantic
similar_names = "allow"
enum_glob_use = "allow"
too_many_lines = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
match_wildcard_for_single_variants = "allow"
module_name_repetitions = "allow"
# nursery
missing_const_for_fn = "allow"
